tests/reference/ast_new-function_def3-f66064a.stderr
syntax error: Token '...' is unexpected here
  --> tests/parser/function_def3.py:73:30
   |
73 | def func(*, param4, param5): ...;
   |                              ^^^ 
